# keh-github-scraper-batch

./: .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  app.py  keywords.json  pyproject.toml  test_json.py
.github/workflows/: ci.yml
concourse/: ci.yml  hello-world.yml
concourse/scripts/: build_image.sh  set_pipeline.sh  terraform_infra.sh
terraform/batch/: data.tf  eventbridge.tf  main.tf  permissions.tf  providers.tf  variables.tf
terraform/batch/env/dev/: backend-dev.tfbackend  example_tfvars.txt
terraform/batch/env/prod/: backend-prod.tfbackend  example_tfvars.txt
terraform/service/: main.tf  outputs.tf  variables.tf
terraform/service/env/dev/: backend-dev.tfbackend  example_tfvars.txt
