[tool.poetry]
name = "github-org-tech-lambda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
logging = "^0.4.9.6"
boto3 = "^1.35.95"
github-api-toolkit = {git = "https://github.com/ONS-Innovation/github-api-package.git", rev = "v2.0.3"}
botocore = "^1.35.95"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
